# research

./: README.md
ERC721-sample/: package-lock.json  package.json
ERC721-sample/contracts/: ERC721.vy
ERC721-sample/migrations/: 2_deploy_contracts.js
energy_blockchain/: demotask.md
ovm-js/: .gitignore  package-lock.json  package.json  tsconfig.json  tslint.json
ovm-js/src/: index.ts
ovm-js/src/layer1/: index.ts
ovm-js/src/layer2/: bucket.ts  claim.ts  index.ts
ovm-js/src/predicate/: DeciderManager.ts  LessThanQuantifier.ts  PreimageExistsDecider.ts  UniversalQuantificationPredicate.ts  (+3 more)
ovm-js/test/: PreimageExistsDecider.test.ts  UniversalQuantificationPredicate.test.ts
ovm-rs/: Cargo.toml
ovm-rs/src/: layer1.rs  layer2.rs  lib.rs  predicate.rs
ovm-rs/src/layer1/: event.rs  layer1_core.rs  tx.rs
ovm-rs/src/layer2/: claim.rs  layer2_core.rs
ovm-rs/src/predicate/: abi.rs  preimage_exists_decider.rs  types.rs
plasma-rust-framework/: README.md
plasma-rust-framework/core/: Cargo.toml
plasma-rust-framework/wallet/: Cargo.toml
plasma-rust-framework/wallet-wasm/: Cargo.toml  LICENSE_MIT  index.js
predicate-sample/: package.json
predicate-sample/contracts/: FastFinalityPredicate.vy
predicate-sample/migrations/: 2_deploy_contracts.js
rust-android-eample/: Cargo.toml  README.md
rust-android-example/src/: lib.rs
rust-ewasm/: Cargo.toml  Makefile  README.md  demo.rs  demo.wat
rust-ios-example/: .gitignore  Cargo.toml  README.md
rust-ios-example/src/: lib.rs
vyper-example/contracts/: Sample.vy
vyper-example/test/: Sample.test.js
(+3 files in other folders)
