[package]
name = "rust_android_example"
version = "0.1.0"
authors = ["Cryptoeconomics Lab <info@cryptoeconomicslab.com>"]
edition = "2018"

[dependencies]
jni = { version = "0.10.2", default-features = false }
plasma-core = { git = "https://github.com/cryptoeconomicslab/plasma-rust-framework.git", branch="remove-failure", path="./core" }

bytes = "0.4.12"
rlp = "0.3.0"
ethereum-types = "0.4"

[profile.release]
lto = true

[lib]
name = "rust_android_example"
crate-type = ["cdylib"]
